--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -1,7 +1,12 @@
 /* base styles, feel free to edit */
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: Arial;
+}
+
+main {
+    margin: 10px;
 }
