--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -33,3 +33,35 @@
 #feed-container {
     padding: 10px;
 }
+
+#jobLikesContent {
+    overflow-y: auto;
+    max-height: 100%;
+    padding: 15px;
+}
+
+.jobCommentsModal > .modal-dialog {
+    width: 80vw;
+    height: 80vh;
+    margin: auto;
+}
+
+.jobCommentsModal > .modal-dialog > .modal-content {
+    width: 100%;
+    height: 100%;
+    margin-top: 5vh;
+}
+
+.like-block {
+    background-color: #f0f0f0;   
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.liked-user {
+    font-size: 16px;
+    color: #333;
+    margin: 0;
+}
