--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -8,7 +8,8 @@
     display: none;
 }
 
-#page-login, #page-register {
+#page-login,
+#page-register {
     padding: 10px;
 }
 
@@ -34,34 +35,40 @@
     padding: 10px;
 }
 
-#jobLikesContent {
+.job-modal-content {
     overflow-y: auto;
     max-height: 100%;
     padding: 15px;
 }
 
-.jobCommentsModal > .modal-dialog {
+.jobCommentsModal>.modal-dialog {
     width: 80vw;
     height: 80vh;
     margin: auto;
 }
 
-.jobCommentsModal > .modal-dialog > .modal-content {
+.jobCommentsModal>.modal-dialog>.modal-content {
     width: 100%;
     height: 100%;
     margin-top: 5vh;
 }
 
-.like-block {
-    background-color: #f0f0f0;   
+.job-modal-block {
+    background-color: #f0f0f0;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.liked-user {
-    font-size: 16px;
+.job-modal-text {
+    font-size: 1rem;
     color: #333;
     margin: 0;
+}
+
+.username-modal-style {
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: #007bff;
 }
