--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -18,13 +18,20 @@
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #B2DFEE;
+    background-color: #FFFFFF;
     padding: 10px;
     z-index: 999;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 10vh;
+    border: 1px solid #E7E7E7;
+}
+
+#top-bar>h1 {
+    color: #0A66C2;
+    font-size: clamp(24px, 8vw, 60px);
+    margin: 0;
 }
 
 #page-feed {
@@ -39,6 +46,10 @@
     overflow-y: auto;
     max-height: 100%;
     padding: 15px;
+}
+
+.jobCommentsModal {
+    --bs-modal-width: 100%;
 }
 
 .jobCommentsModal>.modal-dialog {
@@ -63,7 +74,7 @@
 
 .job-modal-text {
     font-size: 1rem;
-    color: #333;
+    color: #1C1C1C;
     margin: 0;
 }
 
