--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -159,3 +159,27 @@
     overflow: auto;
     max-height: 75vh;
 }
+
+
+@media (max-width: 600px) {
+    .profile-content {
+        flex-direction: column;
+    }
+    
+    .profile-job-container,
+    .watcher-section {
+        width: 100%;
+        max-height: none;
+        height: auto;
+    }
+    
+    .profile-job-container {
+        height: 75vh; 
+        border-left: none;
+        border-bottom: 1px solid #f5f5f5;
+    }
+    
+    .watcher-section {
+        height:25vh;
+    }
+}
