start make other user profile

--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -114,7 +114,7 @@
 .profile-card {
     width: 100%;
     max-width: 80vw;
-    margin: 0 auto;
+    margin: 11vh auto;
     background: white;
     border: 1px solid #E7E7E7;
 }
