--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -96,7 +96,7 @@
     color: #007bff;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
     .top-bar h1 {
         /* don't display h1 since there will be no space in one line*/
         font-size: 0;
@@ -121,11 +121,35 @@
 
 .profile-header {
     display: flex;
-    justify-content: space-between;
+    gap:15px;
     align-items: center;
     padding: 20px;
     background: #0A66C2;
     color: white;
+}
+
+.profile-avatar {
+    flex: 0 0 auto;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%; /* make the avatar a circle */
+    overflow: hidden;
+}
+
+.profile-text-content {
+    flex: 1; 
+    margin-left: 10px;
+}
+
+.profile-buttons{
+    margin-left: auto; 
+    white-space: nowrap; 
+}
+
+.avatar-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .profile-name {
@@ -163,7 +187,7 @@
     height: 75vh;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
     .profile-content {
         flex-direction: column;
     }
@@ -184,4 +208,8 @@
     .watcher-section {
         height:25vh;
     }
+
+    .profile-avatar {
+        display: none;
+      }
 }
