--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -13,6 +13,10 @@
     padding: 10px;
 }
 
+#errorPopup {
+    z-index: 99999 !important;
+}
+
 .top-bar {
     position: fixed;
     top: 0;
@@ -76,7 +80,8 @@
     margin-top: 5vh;
 }
 
-.job-modal-block, .profile-watcher-name-block {
+.job-modal-block,
+.profile-watcher-name-block {
     background-color: #f0f0f0;
     padding: 10px;
     margin-bottom: 10px;
@@ -121,7 +126,7 @@
 
 .profile-header {
     display: flex;
-    gap:15px;
+    gap: 15px;
     align-items: center;
     padding: 20px;
     background: #0A66C2;
@@ -132,18 +137,19 @@
     flex: 0 0 auto;
     width: 60px;
     height: 60px;
-    border-radius: 50%; /* make the avatar a circle */
+    border-radius: 50%;
+    /* make the avatar a circle */
     overflow: hidden;
 }
 
 .profile-text-content {
-    flex: 1; 
+    flex: 1;
     margin-left: 10px;
 }
 
-.profile-buttons{
-    margin-left: auto; 
-    white-space: nowrap; 
+.profile-buttons {
+    margin-left: auto;
+    white-space: nowrap;
 }
 
 .avatar-image {
@@ -195,22 +201,22 @@
     .profile-content {
         flex-direction: column;
     }
-    
+
     .profile-job-container,
     .watcher-section {
         width: 100%;
         max-height: none;
         height: auto;
     }
-    
+
     .profile-job-container {
-        height: 75vh; 
+        height: 75vh;
         border-left: none;
         border-bottom: 1px solid #f5f5f5;
     }
-    
+
     .watcher-section {
-        height:25vh;
+        height: 25vh;
     }
 
     .profile-avatar {
