--- a/frontend/styles/global.css
+++ b/frontend/styles/global.css
@@ -11,6 +11,7 @@
 #page-login,
 #page-register {
     padding: 10px;
+    padding-top: 10vh;
 }
 
 #errorPopup {
@@ -189,19 +190,6 @@
 }
 
 @media (max-width: 750px) {
-    .top-bar h1 {
-        /* don't display h1 since there will be no space in one line*/
-        font-size: 0;
-    }
-
-    .top-bar h1 .subtext {
-        /* only show subtext, but with h1's style */
-        color: #0A66C2;
-        font-size: clamp(24px, 8vw, 60px);
-        margin: 0;
-        opacity: 1;
-    }
-
     .profile-content {
         flex-direction: column;
     }
@@ -233,5 +221,23 @@
 
     .btn-small {
         display: block;
+    }
+}
+
+@media (max-width: 1100px) {
+    .top-bar h1 {
+        /* don't display h1 since there will be no space in one line*/
+        font-size: 0;
+    }
+    #page-login > .top-bar > h1, #page-register > .top-bar >h1 {
+        font-size: clamp(12px, 10vw, 60px);
+    }
+
+    .top-bar h1 .subtext {
+        /* only show subtext, but with h1's style */
+        color: #0A66C2;
+        font-size: clamp(12px, 7vw, 60px);
+        margin: 0;
+        opacity: 1;
     }
 }
